# sr-test

./: .releaserc.json  README.md  VERSION.txt  package-lock.json  package.json  pyproject.toml  version.txt
.github/workflows/: discord.yml  release.yml
src/test_challenge_toolkit/: cli.py
