[project]
name = "test-challenge-toolkit"
version = "1.2.1"
description = "CTF Pilot's Challenge Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "EUPL-1.2"
license-files = ["LICENSE"]
authors = [
  { name = "Mikkel Albrechtsen", email = "developer@themikkel.dk" },
]
maintainers = [
  { name = "Mikkel Albrechtsen", email = "developer@themikkel.dk" },
]
keywords = [
  "ctf",
  "ctf-pilot",
  "security",
  "tools",
]
dependencies = [
  "python-slugify==8.0.4",
  "pyyaml==6.0.2",
]
[project.scripts]
test-challenge-toolkit = "test_challenge_toolkit.cli:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
